# NCNN

Projects/LeNet/: lenet.cpp
Projects/MobileNet-Yolo/yoloface-50k/: yoloface-50k_SPP.cfg
Projects/examples/: CMakeLists.txt  mobilenetssd.cpp
Projects/examples_face_recognize/src/: main.cpp  main_pc.cpp
Projects/ncnn_s32v/: CMakeLists.txt
Projects/ncnn_s32v/pfld/: main.cpp
Projects/ncnn_s32v/src/: CMakeLists.txt  yoloface-500k-lanmark106.cpp
Projects/ncnn_s32v/tests/: test_batchnorm.cpp
Projects/nniefacelib/PFPLD/: pfpld_pytorch_inference_camera.py
Projects/nniefacelib/pfld/: PFLD_Ultralight.py  PFLD_Ultralight_Slim.py  PFLD_Ultralight_Slim_Attention.py  convert_to_onnx.py
Projects/yolo-fastest_ncnn/: BUILD.mk  build_yolo-fastest.sh
Projects/yolo-fastest_ncnn/src/: yolo-fastest.cpp
demos/: detect_squeezenet.cpp
ncnn/: CMakeLists.txt
ncnn-master/: NCNN_install.md
ncnn/src/: CMakeLists.txt
ncnn/toolchains/: aarch64-linux-gnu.toolchain-bak.cmake  aarch64-linux-gnu.toolchain.cmake
ncnn/tools/darknet/: yoloface.md
ncnn_vs2017/: test
ncnn_vs2017/Test/: main.cpp
ncnn_vs2017/mobilenet_ssd/: mobilenetssd.cpp  mobilenetssd_v1.cpp
ncnn_vs2017/squeezenet/: squeezenet_v1.cpp  squeezenet_video.cpp
workspace/LiveFaceReco_RaspberryPi/: CMakeLists-host.txt
workspace/LiveFaceReco_RaspberryPi/src/: livefacereco-arm.cpp  livefacereco-host.cpp
workspace/Mobilenet-Yolo/: MobileNet-YOLOface.md  Yoloface-50k_500k-optimization.md
workspace/Mobilenet-Yolo/WIDE_face/: voc_label.py
workspace/Yolo-Fastest_RaspberryPi/: CMakeLists.txt
workspace/ncnn_nanodet_RaspberryPi/: CMakeLists.txt
workspace/pfpld_RaspberryPi/: CMakeLists.txt
(+11 files in other folders)
